--- a/src/Search.css
+++ b/src/Search.css
@@ -19,7 +19,7 @@ input {
 
 .search-form {
   padding: 30px;
-  margin-top: 20px;
+  margin-top: 50px;
   display: flex;
   align-items: stretch;
   border-top: solid;
@@ -28,10 +28,10 @@ input {
 }
 
 .movies-search-container {
-  padding: 20px;
+  padding: 10px;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 20px;
+  grid-gap: 5px;
   background-color: black;
 }
 
